scripts/nullaway/annotator/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8.txt
../annotator/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/utils/TextAreaAppender.java:28: error: [NullAway] dereferenced expression textArea is @Nullable
        textArea.append(message);
                ^
    (see http://t.uber.com/nullaway )
../annotator/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:44: error: [NullAway] initializer method does not guarantee @NonNull fields mainFrame (line 37), controlPanel (line 38), threadGroup (line 39), floorsMap (line 40), building (line 41), timer (line 42) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ActionViewController() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:125: error: [NullAway] dereferenced expression view is @Nullable
		view.setElevatorPassengers(elevator.getElevatorPassengers());
		    ^
    (see http://t.uber.com/nullaway )
../annotator/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:132: error: [NullAway] dereferenced expression floorsMap.get(floor) is @Nullable
			floorsMap.get(floor).update(floor.getDispatchPassengers(),
			                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:137: error: [NullAway] dereferenced expression floorsMap.get(elevator.getCurrentFloor()) is @Nullable
		floorsMap.get(elevator.getCurrentFloor()).setElevatorPassengers(
		                                         ^
    (see http://t.uber.com/nullaway )
5 errors
